Check that ClassicPendingScript is not accessed after prefinalizer explicitly

To ensure upcoming changes to prefinalizers around PendingScript, this CL
asserts that ClassicPendingScript is not touched after prefinalization.

The state transition of ClassicPendingScript and ScriptStreamer is
complicated, and I'd like to check that our change doesn't break the
their assumptions.

BUG=715309

Review-Url: https://codereview.chromium.org/2837413002
Cr-Commit-Position: refs/heads/master@{#467205}

Former-commit-id: f72cff34bada6f453c14170273e2c67354209109